# circt

./: CMakeLists.txt
docs/Dialects/FIRRTL/: RationaleFIRRTL.md
examples/: CMakeLists.txt
examples/thdl/: CMakeLists.txt  README.md
examples/thdl/Ch1/: AST.cpp  CMakeLists.txt  lexer.cpp  parser.cpp  thdl.cpp
examples/thdl/Ch1/include/thdl/: AST.h  Lexer.h  Parser.h
include/circt/Conversion/: Passes.td
integration_test/: cocotb_driver.py
lib/Conversion/ArcToLLVM/: LowerArcToLLVM.cpp
lib/Conversion/ConvertToArcs/: ConvertToArcs.cpp
lib/Conversion/DCToHW/: DCToHW.cpp
lib/Conversion/ExportVerilog/: ExportVerilog.cpp  LegalizeNames.cpp  PrepareForEmission.cpp
lib/Conversion/FIRRTLToHW/: LowerToHW.cpp
lib/Dialect/Arc/: ArcOps.cpp
lib/Dialect/Comb/: CombFolds.cpp
lib/Dialect/FIRRTL/: FIRRTLDialect.cpp  FIRRTLFolds.cpp  FIRRTLOps.cpp  FIRRTLTypes.cpp  FIRRTLUtils.cpp
lib/Dialect/HW/: HWAttributes.cpp  HWOps.cpp  HWTypes.cpp  InstanceGraphBase.cpp  ModuleImplementation.cpp
lib/Dialect/OM/: OMOps.cpp
lib/Dialect/SV/: CMakeLists.txt  SVOps.cpp
test/Conversion/ArcToLLVM/: lower-arc-to-llvm.mlir
test/Conversion/DCToHW/: basic.mlir  max.mlir
test/Conversion/FIRRTLToHW/: errors.mlir  lower-to-hw-errors.mlir  lower-to-hw.mlir
test/Conversion/HandshakeToFIRRTL/: test_buffer.mlir  test_cmerge.mlir  test_constant.mlir  test_fork.mlir  test_merge.mlir  test_mux.mlir  test_pack_unpack.mlir  test_sink.mlir  (+2 more)
test/firtool/: link-circuit-source.fir  link-circuit-target.fir
tools/arcilator/: CMakeLists.txt  arcilator.cpp
tools/firtool/: firtool.cpp
(+111 files in other folders)
